[tool.poetry]
name = "gopreprocess"
version = "0.0.0"
description = "gopreprocess"
authors = ["Sierra Moxon <smoxon@lbl.gov>"]
license = "MIT"
readme = "README.md"

packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = ">=3.9"
click = "*"
importlib-metadata = ">=6.6.0"
pystow = "^0.5.0"
ontobio = "^2.8.8"

[tool.poetry.group.dev.dependencies]
coloredlogs = {version = "^15.0.1", optional = true}
pytest = {version = ">=7.1.2", optional = true}
sphinx = {version = ">=6.1.3", optional = true}
sphinx-rtd-theme = {version = ">=1.0.0", optional = true}
sphinx-autodoc-typehints = {version = ">=1.2.0", optional = true}
sphinx-click = {version = ">=4.3.0", optional = true}

[tool.poetry.scripts]
go_preprocess = "gopreprocess.cli:main"

[tool.poetry.extras]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
    "sphinx-click",
    ]
tests = ["pytest"]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.black]
line-length = 100
target-version = ["py39", "py310"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
include_trailing_comma = true
reverse_relative = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
