[tool.poetry]
name = "gopreprocess"
version = "0.0.0"
description = "gopreprocess"
authors = ["Sierra Moxon <smoxon@lbl.gov>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
click = "*"
importlib-metadata = ">=6.6.0"
pystow = "^0.5.0"
ontobio = ">=2.8.8"
black = "^23.7.0"
pyproject-toml = "^0.0.10"

[tool.poetry.group.dev.dependencies]
coloredlogs = { version = "^15.0.1", optional = true }
pytest = { version = ">=7.1.2", optional = true }
tox = "^4.6.4"
pytest-mock = "^3.12.0"

[tool.poetry.scripts]
convert_annotations = "src.gopreprocess.cli:convert_annotations"
compare = "src.gopreprocess.cli:compare"
download = "src.gopreprocess.cli:download"
merge_files = "src.gopreprocess.cli:merge_files"
get_goa_files = "src.gopreprocess.cli:get_goa_files"
convert_p2g_annotations = "src.gopreprocess.cli:convert_p2g_annotations"
get_gpad_files = "src.gopreprocess.cli:get_gpad_file"
convert_gpad = "src.gopreprocess.cli:convert_noctua_gpad_1_2_to_2_0_annotations"
validate = "src.gopreprocess.cli:validate"

[tool.poetry.extras]
tests = ["pytest"]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"


[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.black]
line-length = 170
target-version = ["py39", "py310"]

[tool.ruff]
extend-ignore = [
    "D211", # `no-blank-line-before-class`
    "D212", # `multi-line-summary-first-line`
    "D401", # `First line of docstring should be in imperative mood`
    "S101", # `Use of assert detected. It would be nice to keep this check for everything but the BDD tests.`
    "B008", # `Do not perform function calls in argument defaults.`
    "F841", # `local variable 'x' is assigned to but never used`
]
line-length = 170

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]

# Select or ignore from https://beta.ruff.rs/docs/rules/
select = [
    "B", # bugbear
    "D", # pydocstyle
    "E", # pycodestyle errors
    "F", # Pyflakes
    "I", # isort
    "S", # flake8-bandit
    "W", # Warning
]

[tool.codespell]
skip = "*.po,*.ts,.git,pyproject.toml,*.json,*.gpi,*.gaf,*.gpad"
count = ""
quiet-level = 3
